tests/paczka1/fuzzy1/99577235.err
Error in line 5: 3HuHiF02E S790 45,6
Error in line 2: S790 S145 89,8
Error in line 10: 8ImA A143 74,8
Error in line 11: S790 A143 68,2
Error in line 6: P6nroY S790 53,8
Error in line 19: 3HuHiF02E A143 15,8
Error in line 25: S790 S145 91,1
Error in line 26: S790 S790 81,1
Error in line 31: 8ImA A143 72,3
